tried to fix project cards vertical possible truncation when too much text on  <= md screens

--- a/public/css/misc_data_list.css
+++ b/public/css/misc_data_list.css
@@ -20,7 +20,7 @@
 
 .misc-data-card .name{
     font-size: 18px;
-    margin-bottom: 7px;
+    margin-bottom: 8px;
     font-weight: bold;
     line-height: 1.05;
 }
